# shbt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: new-feature-request.md  reproducible-bug-report.md
cmake/configure_files/: shbt_config.h.in
cmake/modules/: FindLibunwind.cmake  SetupMPI.cmake
include/: CMakeLists.txt
include/shbt/: CMakeLists.txt  shbt.h  shbt_internal.h
src/: CMakeLists.txt  demangle_abi.cpp  demangle_ia64.c  shbt_backtrace.c  shbt_signal.c  shbt_utils.c
test/: CMakeLists.txt  bus.c  demangle.c  ill.c  intdiv.c  intdiv2.c  intdiv3.c  no_error.c  segfault.c  wait.c
